feat(plugins): final security hardening and complex output support
- Added strict regex validation for Plugin IDs
- Added sanitization for dependency versions in IPC
- Enhanced DynamicASTNodeAdapter to handle nested/dotted outputs
- Refactored PluginInjectionStrategy for path safety

--- a/plugins/hello-world/manifest.json
+++ b/plugins/hello-world/manifest.json
@@ -2,7 +2,7 @@
     "id": "hello-world",
     "name": "Hello World",
     "version": "1.0.0",
-    "description": "A simple plugin to test the Plugin System.",
+    "description": "A simple plugin to test the Plugin System.p.",
     "requirements": {
         "axios": "^1.7.9"
     },
