--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "rete": "^2.0.6",
     "rete-area-plugin": "^2.1.5",
     "rete-connection-plugin": "^2.0.5",
+    "rete-history-plugin": "^2.1.1",
+    "rete-minimap-plugin": "^2.0.3",
     "rete-react-plugin": "^2.1.0",
     "rete-render-utils": "^2.0.3",
     "tailwind-merge": "^3.4.0"
