--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "rete-minimap-plugin": "^2.0.3",
     "rete-react-plugin": "^2.1.0",
     "rete-render-utils": "^2.0.3",
-    "tailwind-merge": "^3.4.0"
+    "semver": "^7.7.3",
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -57,6 +59,7 @@
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/semver": "^7.7.1",
     "@vitejs/plugin-react": "^5.1.1",
     "concurrently": "^9.2.1",
     "cross-env": "^7.0.3",
