feat(plugin): implement toolbar overlay architecture and debug toolkit

--- a/plugins/railgun-debug-toolkit/manifest.json
+++ b/plugins/railgun-debug-toolkit/manifest.json
@@ -16,7 +16,7 @@
             "id": "railgun-debug-toolkit-view",
             "label": "Debug Tools",
             "icon": "Wrench",
-            "target": "sidebar"
+            "target": "toolbar"
         }
     ]
 }
