fix(compiler): resolve loop index mapping and improve reachability validation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,16 @@
     {
       "path": "./tsconfig.electron.json"
     }
+  ],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
+  },
+  "exclude": [
+    "tests"
   ]
 }
